dropshot/tests/fail/bad_server_invalid_method_kinds.stderr
error: endpoint method `ref_self_method` must be static
  --> tests/fail/bad_server_invalid_method_kinds.rs:10:9
   |
10 |         &self,
   |         ^^^^^

error: endpoint method `mut_self_method` must be static
  --> tests/fail/bad_server_invalid_method_kinds.rs:16:9
   |
16 |         &mut self,
   |         ^^^^^^^^^

error: endpoint method `self_method` must be static
  --> tests/fail/bad_server_invalid_method_kinds.rs:22:9
   |
22 |         self,
   |         ^^^^

error: endpoint method `self_box_self_method` must be static
  --> tests/fail/bad_server_invalid_method_kinds.rs:28:9
   |
28 |         self: Box<Self>,
   |         ^^^^^^^^^^^^^^^

error: endpoint method `self_arc_self_method` must be static
  --> tests/fail/bad_server_invalid_method_kinds.rs:34:9
   |
34 |         self: Arc<Self>,
   |         ^^^^^^^^^^^^^^^

error: endpoint method `non_async_method` must be async
  --> tests/fail/bad_server_invalid_method_kinds.rs:39:5
   |
39 |     fn non_async_method(
   |     ^^

error: endpoint method `non_returning_method` must return a Result
  --> tests/fail/bad_server_invalid_method_kinds.rs:44:5
   |
44 |     async fn non_returning_method(rqctx: RequestContext<Self>);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: endpoint method `with_type_param` must take RequestContext<Self>
  --> tests/fail/bad_server_invalid_method_kinds.rs:48:16
   |
48 |         rqctx: RequestContext<T>,
   |                ^^^^^^^^^^^^^^^^^

error: endpoint method `with_const_param` must not have generic parameters
  --> tests/fail/bad_server_invalid_method_kinds.rs:52:31
   |
52 |     async fn with_const_param<const N: usize>(
   |                               ^^^^^^^^^^^^^^

error: endpoint method `with_where_clause` must not have a where clause
  --> tests/fail/bad_server_invalid_method_kinds.rs:61:5
   |
61 | /     where
62 | |         Self: Sized;
   | |___________________^

error: endpoint method `with_where_clause_2` must not have a where clause
  --> tests/fail/bad_server_invalid_method_kinds.rs:68:5
   |
68 | /     where
69 | |         Self: std::fmt::Debug;
   | |_____________________________^

error: endpoint method `with_where_clause_3` must not have a where clause
  --> tests/fail/bad_server_invalid_method_kinds.rs:75:5
   |
75 | /     where
76 | |         usize: std::fmt::Debug;
   | |______________________________^

error: endpoint method `many_things_wrong` must be async
  --> tests/fail/bad_server_invalid_method_kinds.rs:81:5
   |
81 |     fn many_things_wrong(rqctx: RequestContext<Self>);
   |     ^^

error: endpoint method `many_things_wrong` must return a Result
  --> tests/fail/bad_server_invalid_method_kinds.rs:81:5
   |
81 |     fn many_things_wrong(rqctx: RequestContext<Self>);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
